# rtmros_robotis

./: README.md
hrpsys_gazebo_robotis/: README.md
hrpsys_ros_bridge_robotis/: CMakeLists.txt  README.md  memo.txt  package.xml  setup.py
hrpsys_ros_bridge_robotis/euslisp/: op3-interface.l
hrpsys_ros_bridge_robotis/launch/: op3.launch  op3_nosim.launch  op3_ros_bridge.launch  op3_startup.launch
hrpsys_ros_bridge_robotis/models/: OP3.conf  OP3.urdf  OP3.xml  OP3_nosim.RobotHardware.conf  OP3_nosim.conf  OP3_nosim.xml  hrp2jsknt-utils.l
hrpsys_ros_bridge_robotis/models/OP3_meshes/: head_pan_link_mesh.dae  l_ank_roll_link_mesh.dae  l_el_link_mesh.dae  l_hip_yaw_link_mesh.dae  l_knee_link_mesh.dae  l_sho_pitch_link_mesh.dae  r_ank_roll_link_mesh.dae  r_el_link_mesh.dae  r_hip_yaw_link_mesh.dae  r_knee_link_mesh.dae  r_sho_pitch_link_mesh.dae
hrpsys_ros_bridge_robotis/scripts/: clean.sh
hrpsys_ros_bridge_robotis/src/hrpsys_ros_bridge_robotis/: op3_hrpsys_config.py
robotis_models/: CMakeLists.txt  package.xml
robotis_models/OP3/: OP3.urdf  OP3main.wrl  head_pan_link.wrl  head_tilt_link.wrl  l_ank_roll_link.wrl  l_el_link.wrl  l_hip_yaw_link.wrl  l_knee_link.wrl  l_sho_pitch_link.wrl  memo.txt  op3-project.cnoid  op3-project.xml  op3.urdf  op3.wrl  r_ank_roll_link.wrl  r_el_link.wrl  r_hip_yaw_link.wrl  r_knee_link.wrl  r_sho_pitch_link.wrl  robotis_op3-head_pan_link-robotis_op3-head_pan_link_visual.wrl  robotis_op3-l_ank_roll_link-robotis_op3-l_ank_roll_link_visual.wrl  robotis_op3-l_el_link-robotis_op3-l_el_link_visual.wrl  robotis_op3-l_knee_link-robotis_op3-l_knee_link_visual.wrl  robotis_op3-l_sho_pitch_link-robotis_op3-l_sho_pitch_link_visual.wrl  robotis_op3-r_ank_roll_link-robotis_op3-r_ank_roll_link_visual.wrl  robotis_op3-r_el_link-robotis_op3-r_el_link_visual.wrl  robotis_op3-r_hip_yaw_link-robotis_op3-r_hip_yaw_link_visual.wrl  robotis_op3-r_knee_link-robotis_op3-r_knee_link_visual.wrl  robotis_op3-r_sho_pitch_link-robotis_op3-r_sho_pitch_link_visual.wrl
robotis_models/cmake/: robotis_models-extras.cmake.in
robotis_ros_bridge/: README.md
rtmros_robotis/: CMakeLists.txt  package.xml
